--- a/src/components/CodeNav/left_nav.less
+++ b/src/components/CodeNav/left_nav.less
@@ -89,9 +89,11 @@
 
       .menu-item {
         width: 100%;
+        height: calc(var(--liLength) * 38px);
         display: flex;
         flex-direction: column;
         align-items: flex-end;
+        overflow: hidden;
 
         .item {
           display: flex;
@@ -138,6 +140,30 @@
             padding-left: 15px;
           }
         }
+      }
+
+      .menu-enter {
+        height: 0;
+      }
+
+      .menu-enter-to {
+        height: calc(var(--liLength) * 38px);
+      }
+
+      .menu-enter-active {
+        transition: height 360ms linear;
+      }
+
+      .menu-leave {
+        height: calc(var(--liLength) * 38px);
+      }
+
+      .menu-leave-to {
+        height: 0;
+      }
+
+      .menu-leave-active {
+        transition: height 360ms linear;
       }
     }
   }
