--- a/src/components/CodeNav/left_nav.less
+++ b/src/components/CodeNav/left_nav.less
@@ -68,14 +68,21 @@
         }
 
         i {
-          width: 26px;
-          height: 26px;
           line-height: 26px;
 
           &.menu-icon {
             svg {
               width: 26px;
               height: 26px;
+            }
+          }
+
+          &.menu-open {
+            transition: all 360ms linear;
+            transform-origin: center;
+
+            &.open {
+              transform: rotate(90deg);
             }
           }
         }
@@ -115,6 +122,7 @@
             width: 26px;
             height: 26px;
             line-height: 26px;
+            text-align: center;
 
             &.item-icon {
               svg {
