--- a/src/assets/style/base.less
+++ b/src/assets/style/base.less
@@ -7,7 +7,8 @@ html {
   body {
     background-color: #f5f6f9;
     overflow-y: scroll;
-    overflow-x: hidden;
+    // overflow-x: hidden;
+    min-width: 1200px;
 
     ul,
     ol,
