开发日志路由页面隐藏侧边导航栏

--- a/src/components/Header/header.less
+++ b/src/components/Header/header.less
@@ -3,6 +3,7 @@
   position: fixed;
   width: calc(100% - var(--leftNavWidth));
   z-index: 99;
+  margin-left: var(--marginLeft);
   transition: width 500ms ease-in 300ms;
 
   .header {
