开发日志模块-取消贡献图组件循环请求时的进度条-改为请求时出现加载动画

--- a/src/components/Header/header.less
+++ b/src/components/Header/header.less
@@ -2,8 +2,8 @@
 .header-container {
   position: fixed;
   width: calc(100% - var(--leftNavWidth));
+  min-width: 980px;
   z-index: 99;
-  margin-left: var(--marginLeft);
   transition: width 500ms ease-in 300ms;
 
   .header {
