--- a/src/components/Header/header.less
+++ b/src/components/Header/header.less
@@ -161,23 +161,18 @@
 
       // 登录按钮的样式
       &.login-container {
-        flex: 1;
+        width: 100px;
         display: flex;
         justify-content: center;
 
-        .el-button {
-          background-image: linear-gradient(to right bottom, #2681c2, #3ad6e2);
-          border: none;
-          display: flex;
-
-          > span {
-            flex: 1;
-
-            a {
-              flex: 1;
-              color: #fff;
-            }
-          }
+        i {
+          width: 36px;
+          height: 36px;
+          text-align: center;
+          line-height: 36px;
+          font-size: 22px;
+          cursor: pointer;
+          color: #eee;
         }
       }
     }
