--- a/src/components/Header/header.less
+++ b/src/components/Header/header.less
@@ -1,10 +1,9 @@
 // 屏幕大于1200像素
 .header-container {
   position: fixed;
-  width: calc(100% - var(--leftNavWidth));
-  min-width: 980px;
+  width: 100%;
+  min-width: 1200px;
   z-index: 99;
-  transition: width 500ms ease-in 300ms;
 
   .header {
     display: flex;
@@ -12,55 +11,37 @@
     background-color: var(--background);
     height: 56px;
     position: relative;
-    padding-left: 20px;
 
     > div {
-      &.fold-btn {
-        width: 40px;
-        height: 100%;
+      // logo 的样式
+      &.logo-container {
         display: flex;
         justify-content: center;
         align-items: center;
-        position: absolute;
-        left: -20px;
+        height: 56px;
+        width: var(--leftNavWidth);
+        background-color: #fff;
+        position: relative;
+        transition: width 500ms ease-in 300ms;
 
-        label {
-          cursor: pointer;
+        .logo {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 80%;
+          height: 100%;
+          margin: auto;
 
-          .nav-switch {
-            position: relative;
-            width: 38px;
-            height: 16px;
-            box-shadow: inset 0px 0px 5px 0px #666;
-            border-radius: 20px;
-            user-select: none;
-            background-color: #f5f6f9;
-
-            .circle {
-              position: absolute;
-              top: 50%;
-              left: 2px;
-              transform: translateY(-50%);
-              background-color: #2681c2;
-              width: 12px;
-              height: 12px;
-              border-radius: 6px;
-              transition: left 300ms ease-in;
-            }
+          .logo-box {
+            display: flex;
+            justify-content: right;
+            align-items: center;
+            flex: 1;
           }
 
-          input[type='checkbox'] {
-            display: none;
-
-            &:checked + .nav-switch {
-              .circle {
-                left: calc(100% - 14px);
-              }
-            }
-          }
-
-          svg {
-            transition: all 500ms ease-in;
+          img {
+            height: 42px;
+            margin-right: 20px;
           }
         }
       }
@@ -70,6 +51,57 @@
         flex: 5;
         height: 100%;
         display: flex;
+        position: relative;
+
+        .fold-btn {
+          width: 40px;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          left: -20px;
+
+          label {
+            cursor: pointer;
+
+            .nav-switch {
+              position: relative;
+              width: 38px;
+              height: 16px;
+              box-shadow: inset 0px 0px 5px 0px #666;
+              border-radius: 20px;
+              user-select: none;
+              background-color: #f5f6f9;
+
+              .circle {
+                position: absolute;
+                top: 50%;
+                left: 2px;
+                transform: translateY(-50%);
+                background-color: #2681c2;
+                width: 12px;
+                height: 12px;
+                border-radius: 6px;
+                transition: left 300ms ease-in;
+              }
+            }
+
+            input[type='checkbox'] {
+              display: none;
+
+              &:checked + .nav-switch {
+                .circle {
+                  left: calc(100% - 14px);
+                }
+              }
+            }
+
+            svg {
+              transition: all 500ms ease-in;
+            }
+          }
+        }
 
         .header-menu {
           position: relative;
@@ -77,6 +109,7 @@
           align-items: center;
           flex: 1;
           height: 100%;
+          margin-left: 20px;
 
           .navigation-bar {
             position: absolute;
