--- a/src/components/CodeNav/left_nav.less
+++ b/src/components/CodeNav/left_nav.less
@@ -5,7 +5,7 @@
   position: fixed;
   top: 56px;
   left: 0;
-  transition: width 500ms ease-in 300ms;
+  transition: width 500ms ease-in;
   z-index: 999;
 
   .left-nav {
