--- a/src/components/Header/header.less
+++ b/src/components/Header/header.less
@@ -23,7 +23,8 @@
         width: var(--leftNavWidth);
         background-color: #fff;
         position: relative;
-        transition: width 500ms ease-in 300ms;
+        transition: width 500ms ease-in;
+        overflow: hidden;
 
         .logo {
           display: flex;
@@ -35,7 +36,7 @@
 
           .logo-box {
             display: flex;
-            justify-content: right;
+            justify-content: center;
             align-items: center;
             flex: 1;
           }
@@ -55,53 +56,59 @@
         position: relative;
 
         .fold-btn {
-          width: 40px;
+          width: 32px;
           height: 100%;
           display: flex;
           justify-content: center;
           align-items: center;
-          position: absolute;
-          left: -20px;
+          margin-left: 20px;
+          cursor: pointer;
 
-          label {
-            cursor: pointer;
-
-            .nav-switch {
-              position: relative;
-              width: 38px;
-              height: 16px;
-              box-shadow: inset 0px 0px 5px 0px #666;
-              border-radius: 20px;
-              user-select: none;
-              background-color: #f5f6f9;
-
-              .circle {
-                position: absolute;
-                top: 50%;
-                left: 2px;
-                transform: translateY(-50%);
-                background-color: #2681c2;
-                width: 12px;
-                height: 12px;
-                border-radius: 6px;
-                transition: left 300ms ease-in;
-              }
-            }
-
-            input[type='checkbox'] {
-              display: none;
-
-              &:checked + .nav-switch {
-                .circle {
-                  left: calc(100% - 14px);
-                }
-              }
-            }
-
-            svg {
-              transition: all 500ms ease-in;
+          svg {
+            path {
+              fill: #fff;
+              transition: all 0.5s ease-in;
             }
           }
+          // label {
+          //   cursor: pointer;
+
+          //   .nav-switch {
+          //     position: relative;
+          //     width: 38px;
+          //     height: 16px;
+          //     box-shadow: inset 0px 0px 5px 0px #666;
+          //     border-radius: 20px;
+          //     user-select: none;
+          //     background-color: #f5f6f9;
+
+          //     .circle {
+          //       position: absolute;
+          //       top: 50%;
+          //       left: 2px;
+          //       transform: translateY(-50%);
+          //       background-color: #2681c2;
+          //       width: 12px;
+          //       height: 12px;
+          //       border-radius: 6px;
+          //       transition: left 300ms ease-in;
+          //     }
+          //   }
+
+          //   input[type='checkbox'] {
+          //     display: none;
+
+          //     &:checked + .nav-switch {
+          //       .circle {
+          //         left: calc(100% - 14px);
+          //       }
+          //     }
+          //   }
+
+          //   svg {
+          //     transition: all 500ms ease-in;
+          //   }
+          // }
         }
 
         .header-menu {
