--- a/src/components/LeftNav/left_nav.less
+++ b/src/components/LeftNav/left_nav.less
@@ -13,78 +13,32 @@
     margin-top: 10px;
     overflow-y: scroll;
     overflow-x: hidden;
+    position: relative;
 
-    .nav-menu {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
+    // 展开时的样式
+    .nav-container {
       width: 220px;
-      height: 100%;
-      box-sizing: border-box;
-      padding: 0 10px;
-      overflow: hidden;
 
-      .menu {
+      .nav-menu {
         display: flex;
-        justify-content: center;
         align-items: center;
-        width: 100%;
-        height: 45px;
+        flex-direction: column;
+        width: 220px;
+        height: 100%;
         box-sizing: border-box;
         padding: 0 10px;
-        border-radius: 10px;
-        transition: background-color 200ms linear;
-
-        &:hover {
-          background-color: #e6e6e6;
-          cursor: pointer;
-        }
-
-        i {
-          line-height: 26px;
-
-          &.menu-icon {
-            svg {
-              width: 26px;
-              height: 26px;
-            }
-          }
-
-          &.menu-open {
-            transition: all 360ms linear;
-            transform-origin: center;
-
-            &.open {
-              transform: rotate(90deg);
-            }
-          }
-        }
-
-        .menu-text {
-          flex: 1;
-          box-sizing: border-box;
-          padding-left: 15px;
-        }
-      }
-
-      .menu-item {
-        width: 100%;
-        height: calc(var(--liLength) * 38px);
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
         overflow: hidden;
 
-        .item {
+        .menu {
           display: flex;
-          justify-content: flex-start;
+          justify-content: center;
           align-items: center;
-          width: 86%;
-          height: 38px;
+          width: 100%;
+          height: 45px;
           box-sizing: border-box;
-          padding-left: 10px;
+          padding: 0 10px;
           border-radius: 10px;
-          margin: 5px 0;
+          transition: background-color 200ms linear;
 
           &:hover {
             background-color: #e6e6e6;
@@ -92,12 +46,9 @@
           }
 
           i {
-            width: 26px;
-            height: 26px;
             line-height: 26px;
-            text-align: center;
 
-            &.item-icon {
+            &.menu-icon {
               svg {
                 width: 26px;
                 height: 26px;
@@ -105,46 +56,216 @@
             }
 
             &.menu-open {
-              border-radius: 50%;
+              transition: all 360ms linear;
+              transform-origin: center;
 
-              &:hover {
-                background-color: #d0d0d0;
+              &.open {
+                transform: rotate(90deg);
               }
             }
           }
 
-          .item-text {
-            height: 38px;
-            text-align: center;
-            line-height: 38px;
+          .menu-text {
+            flex: 1;
             box-sizing: border-box;
             padding-left: 15px;
           }
         }
-      }
 
-      .menu-enter {
-        height: 0;
-      }
+        .menu-item {
+          width: 100%;
+          height: calc(var(--liLength) * 38px);
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
+          overflow: hidden;
 
-      .menu-enter-to {
-        height: calc(var(--liLength) * 38px);
-      }
+          .item {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            width: 86%;
+            height: 38px;
+            box-sizing: border-box;
+            padding-left: 10px;
+            border-radius: 10px;
+            margin: 5px 0;
 
-      .menu-enter-active {
-        transition: height 360ms linear;
-      }
+            &:hover {
+              background-color: #e6e6e6;
+              cursor: pointer;
+            }
 
-      .menu-leave {
-        height: calc(var(--liLength) * 38px);
-      }
+            i {
+              width: 26px;
+              height: 26px;
+              line-height: 26px;
+              text-align: center;
 
-      .menu-leave-to {
-        height: 0;
-      }
+              &.item-icon {
+                svg {
+                  width: 26px;
+                  height: 26px;
+                }
+              }
 
-      .menu-leave-active {
-        transition: height 360ms linear;
+              &.menu-open {
+                border-radius: 50%;
+
+                &:hover {
+                  background-color: #d0d0d0;
+                }
+              }
+            }
+
+            .item-text {
+              height: 38px;
+              text-align: center;
+              line-height: 38px;
+              box-sizing: border-box;
+              padding-left: 15px;
+            }
+          }
+        }
+
+        .menu-enter {
+          height: 0;
+        }
+
+        .menu-enter-to {
+          height: calc(var(--liLength) * 38px);
+        }
+
+        .menu-enter-active {
+          transition: height 360ms linear;
+        }
+
+        .menu-leave {
+          height: calc(var(--liLength) * 38px);
+        }
+
+        .menu-leave-to {
+          height: 0;
+        }
+
+        .menu-leave-active {
+          transition: height 360ms linear;
+        }
+      }
+    }
+    // 收缩时的样式
+    .nav-container-shrink {
+      width: 52px;
+      position: absolute;
+      top: var(--navTop);
+      transition: top 360ms ease-in-out;
+
+      .nav-menu {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 52px;
+        height: 100%;
+        box-sizing: border-box;
+        overflow: hidden;
+
+        .menu {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 42px;
+          height: 45px;
+          box-sizing: border-box;
+          border-radius: 10px;
+          transition: background-color 200ms linear;
+
+          &:hover {
+            background-color: #e6e6e6;
+            cursor: pointer;
+          }
+
+          i {
+            line-height: 26px;
+
+            &.menu-icon {
+              svg {
+                width: 26px;
+                height: 26px;
+              }
+            }
+
+            &.menu-open {
+              transition: all 360ms linear;
+              transform-origin: center;
+
+              &.open {
+                transform: rotate(90deg);
+              }
+            }
+          }
+
+          .menu-text {
+            flex: 1;
+            box-sizing: border-box;
+            padding-left: 15px;
+          }
+        }
+
+        .menu-item {
+          width: 100%;
+          height: calc(var(--liLength) * 38px);
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
+          overflow: hidden;
+
+          .item {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            width: 86%;
+            height: 38px;
+            box-sizing: border-box;
+            padding-left: 10px;
+            border-radius: 10px;
+            margin: 5px 0;
+
+            &:hover {
+              background-color: #e6e6e6;
+              cursor: pointer;
+            }
+
+            i {
+              width: 26px;
+              height: 26px;
+              line-height: 26px;
+              text-align: center;
+
+              &.item-icon {
+                svg {
+                  width: 26px;
+                  height: 26px;
+                }
+              }
+
+              &.menu-open {
+                border-radius: 50%;
+
+                &:hover {
+                  background-color: #d0d0d0;
+                }
+              }
+            }
+
+            .item-text {
+              height: 38px;
+              text-align: center;
+              line-height: 38px;
+              box-sizing: border-box;
+              padding-left: 15px;
+            }
+          }
+        }
       }
     }
   }
