首页主模块-新增天气预报插件

--- a/src/components/Header/header.less
+++ b/src/components/Header/header.less
@@ -27,6 +27,7 @@
         overflow: hidden;
 
         .logo {
+          position: relative;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -45,6 +46,21 @@
             height: 42px;
             margin-right: 20px;
           }
+
+          // .logoText-enter-to,
+          // .logoText-leave {
+          //   transform: scale(1, 1);
+          // }
+
+          // .logoText-enter-active,
+          // .logoText-leave-active {
+          //   transition: all 800ms ease-in;
+          // }
+
+          // .logoText-enter,
+          // .logoText-leave-to {
+          //   transform: scale(0, 0);
+          // }
         }
       }
 
