--- a/src/components/Header/header.less
+++ b/src/components/Header/header.less
@@ -46,21 +46,6 @@
             height: 42px;
             margin-right: 20px;
           }
-
-          // .logoText-enter-to,
-          // .logoText-leave {
-          //   transform: scale(1, 1);
-          // }
-
-          // .logoText-enter-active,
-          // .logoText-leave-active {
-          //   transition: all 800ms ease-in;
-          // }
-
-          // .logoText-enter,
-          // .logoText-leave-to {
-          //   transform: scale(0, 0);
-          // }
         }
       }
 
@@ -87,45 +72,6 @@
               fill: var(--color);
             }
           }
-          // label {
-          //   cursor: pointer;
-
-          //   .nav-switch {
-          //     position: relative;
-          //     width: 38px;
-          //     height: 16px;
-          //     box-shadow: inset 0px 0px 5px 0px #666;
-          //     border-radius: 20px;
-          //     user-select: none;
-          //     background-color: #f5f6f9;
-
-          //     .circle {
-          //       position: absolute;
-          //       top: 50%;
-          //       left: 2px;
-          //       transform: translateY(-50%);
-          //       background-color: #2681c2;
-          //       width: 12px;
-          //       height: 12px;
-          //       border-radius: 6px;
-          //       transition: left 300ms ease-in;
-          //     }
-          //   }
-
-          //   input[type='checkbox'] {
-          //     display: none;
-
-          //     &:checked + .nav-switch {
-          //       .circle {
-          //         left: calc(100% - 14px);
-          //       }
-          //     }
-          //   }
-
-          //   svg {
-          //     transition: all 500ms ease-in;
-          //   }
-          // }
         }
 
         .header-menu {
@@ -201,22 +147,6 @@
         }
       }
 
-      // 小飞机
-      &.mini-program-tips-container {
-        width: 36px;
-        height: 36px;
-        text-align: center;
-        line-height: 36px;
-        font-size: 22px;
-        cursor: pointer;
-        color: #eee;
-        border-radius: 6px;
-
-        &:hover {
-          background-color: #f1f1f1;
-        }
-      }
-
       // 登录按钮的样式
       &.login-container {
         width: 100px;
@@ -224,13 +154,19 @@
         justify-content: center;
 
         i {
-          width: 36px;
-          height: 36px;
+          width: 38px;
+          height: 38px;
           text-align: center;
-          line-height: 36px;
-          font-size: 22px;
+          line-height: 38px;
+          font-size: 26px;
           cursor: pointer;
           color: #eee;
+          transition: all 180ms ease-in;
+          border-radius: 50%;
+
+          &:hover {
+            background-color: #eeeeee20;
+          }
         }
       }
     }
