--- a/src/components/LeftNav/left_nav.less
+++ b/src/components/LeftNav/left_nav.less
@@ -14,6 +14,7 @@
     overflow-y: scroll;
     overflow-x: hidden;
     position: relative;
+    cursor: pointer;
 
     // 展开时的样式
     .nav-container {
