个人中心-随机头像设置-自定义头像设置-头像上传后端开发

--- a/src/components/Header/header.less
+++ b/src/components/Header/header.less
@@ -12,6 +12,8 @@
     background-color: var(--background);
     height: 56px;
     position: relative;
+    transition: background-color 100ms ease-in;
+    box-shadow: var(--headerShadow);
 
     > div {
       // logo 的样式
@@ -113,6 +115,7 @@
 
             span {
               color: var(--color);
+              transition: color 100ms ease-in;
             }
 
             // 齿轮动画
