--- a/src/assets/style/base.less
+++ b/src/assets/style/base.less
@@ -5,7 +5,7 @@ html {
   box-sizing: border-box;
 
   body {
-    background-color: #f5f6f9;
+    background-color: #f7f9fe;
     overflow-y: scroll;
     overflow-x: hidden;
     min-width: 1200px;
