--- a/src/components/LeftNav/left_nav.less
+++ b/src/components/LeftNav/left_nav.less
@@ -10,11 +10,37 @@
 
   .left-nav {
     height: 454px;
-    margin-top: 10px;
     overflow-y: scroll;
     overflow-x: hidden;
     position: relative;
     cursor: pointer;
+
+    .upload {
+      width: 86%;
+      height: 52px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid #2980b9;
+      margin: 10px auto;
+      border-radius: 12px;
+      transition: all 100ms ease-in;
+
+      &:hover {
+        box-shadow: 0 0 3px 1px #2980b960 inset;
+      }
+
+      span {
+        padding-left: 5px;
+      }
+
+      .upload-icon {
+        svg {
+          width: 29px;
+          height: 29px;
+        }
+      }
+    }
 
     // 展开时的样式
     .nav-container {
